--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
+    "underscore": "^1.8.3",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@types/node": "^7.0.7",
     "electron-prebuilt": "^1.2.0",
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
