--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "webpack",
     "watch": "webpack --progress --colors --watch",
     "start": "webpack-dev-server",
-    "native": "electron ."
+    "native": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/assets/images/appicon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=app/assets/images/appicon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pictub\"",
+    "package-linux" : "electron-packager . --overwrite --platform=linux --arch=x64 --icon=app/assets/images/appicon.png --prune=true --out=release-builds"
   },
   "author": "Vaibhav N",
   "license": "MIT",
@@ -21,6 +24,7 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "electron-packager": "^8.6.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "underscore": "^1.8.3",
