changes to math path in production mode

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server",
     "native": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=app/assets/images/appicon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=app/assets/images/appicon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pictub\"",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=app/assets/images/appicon.ico --prune=true --out=release-builds --version-string.CompanyName=Pictub --version-string.FileDescription=Pictub --version-string.ProductName=\"Pictub\"",
     "package-linux" : "electron-packager . --overwrite --platform=linux --arch=x64 --icon=app/assets/images/appicon.png --prune=true --out=release-builds"
   },
   "author": "Vaibhav N",
